<resources>
    <string name="app_name">Pawws</string>
    <string name="identify_the_breed">IDENTIFY THE BREED</string>
    <string name="identify_the_dog">IDENTIFY THE DOG</string>
    <string name="search_dog_breed">SEARCH DOG BREEDS</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="app_title">p<b>aww</b>s</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_identify_dog">Identify Dogs</string>
    <string name="navigation_identify_breed">Identify Breeds</string>
    <string name="navigation_search_breed">Search Breed</string>
    <string name="dog_of_a_certain_breed">Dog of a certain breed</string>
    <string name="submit">Submit</string>
    <string name="next">NEXT</string>
    <string name="select_breed_spinner_label">What is the Breed?</string>
    <string name="select_alert_message">Select a Breed</string>
    <string name="correct_answer_message">CORRECT!</string>
    <string name="incorrect_answer_message">WRONG!</string>
    <string name="search_button_text">Search</string>
    <string name="enter_the_breed_hint">Enter the breed</string>
    <string name="stop">Stop</string>
    <string name="submit_button_title">Submit</string>
    <string name="timer">Timer</string>
    <string name="correct_answer_title">CORRECT!</string>

    <string-array name="dog_array">
        <item>Select a Breed</item>
        <item>French Bulldog</item>
        <item>Shetland Sheepdog</item>
        <item>Pomeranian</item>
        <item>Samoyed</item>
        <item>Siberian Husky</item>
        <item>Malamute</item>
        <item>Tibetan Mastiff</item>
        <item>Bull Mastiff</item>
        <item>Doberman</item>
        <item>German Shepard</item>
    </string-array>
</resources>
