<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dog_watermark"
    tools:context=".activities.MainActivity"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <Button
            android:id="@+id/identify_breed_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/identify_the_breed"/>

        <Button
            android:id="@+id/identify_dog_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/identify_the_dog"/>

        <Button
            android:id="@+id/search_breed_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/search_dog_breed"/>

    </LinearLayout>
    <TextView
        android:id="@+id/top_welcome_message"
        android:layout_width="195dp"
        android:layout_height="38dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/welcome_to"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="349dp"
        android:layout_height="127dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>